--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Stack Problems
 description: My Personal Stack Problems
 author: Agus Makmun
-github: https://github.com/agusmakmun
+github: https://github.com/sophia-hxw
 about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
 disqus_shortname: stackproblems
 google_analytics: UA-XXXXXXXX-Y
@@ -24,7 +24,7 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/sophia-hxw"
 
 share:
   twitter_username: github.io
@@ -38,7 +38,7 @@ urls:
     - text: XML Feed
       url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://sophia-hxw.github.io/xinwen.github.io/"
 baseurl: ""
 paginate: 20
 per_page: 20
