test for my own blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Stack Problems
+title: 橦言无忌
 description: My Personal Stack Problems
-author: Agus Makmun
+author: xinwen
 github: https://github.com/sophia-hxw
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
+about: 幸福的人生就是，有喜欢的事做，有爱的人在身边，有酸甜苦辣，也有悲欢离合～
 disqus_shortname: stackproblems
 google_analytics: UA-XXXXXXXX-Y
 
